--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,15 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#9AA2AF</color>
     <color name="brushGray">#FF666666</color>
+    <color name="palletGray">#FF999999</color>
+    <color name="transparentBlack">#00000000</color>
+    <color name="palletSelectedGray">#FF333333</color>
+
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
+    <color name="blue">#0000FF</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#DC9D3F</color>
+    <color name="purple">#8457D3</color>
+    <color name="random">#DC76D7</color>
 </resources>
