feat: add undo and redo features

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,24 @@
             android:scaleType="fitXY"
             android:contentDescription="@string/add_image_button"/>
 
+        <ImageButton
+            android:id="@+id/ibUndo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/baseline_undo_24"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/undo_button"/>
+
+        <ImageButton
+            android:id="@+id/ibRedo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/baseline_redo_24"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/redo_button"/>
+
     <ImageButton
         android:id="@+id/ibBrush"
         android:layout_width="50dp"
